--- a/xcelium.d/history
+++ b/xcelium.d/history
@@ -132,3 +132,5 @@ s127::(26Nov2025:10:30:13):( xrun -access +rwc -sv -uvm -f file.f )
 s128::(08Dec2025:09:08:23):( xrun -access +rwc -sv -uvm -f file.f )
 s129::(08Dec2025:09:08:33):( xrun -access +rwc -sv -uvm -f file.f -gui )
 s130::(08Dec2025:10:10:07):( xrun -access +rwc -sv -uvm -f file.f -gui )
+s131::(31Dec2025:18:03:20):( xrun -access +rwc -sv -uvm -f file.f -gui )
+s132::(31Dec2025:18:05:24):( xrun -access +rwc -sv -uvm -f file.f -gui )
